--- a/.eslintrc
+++ b/.eslintrc
@@ -1,3 +1,17 @@
 {
-  "extends": "airbnb-base/legacy"
+  "parser": "babel-eslint",
+  "parserOptions": {
+    "ecmaVersion": 2017
+  },
+  "extends": [
+    "eslint:recommended",
+    "airbnb-base/legacy"
+  ],
+  "env": {
+    "es6": true
+  },
+  "rules": {
+    "prefer-const": 2,
+    "no-var": 2
+  }
 }
