--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "popper.js": "^1.14.4"
   },
   "devDependencies": {
+    "babel-eslint": "^10.0.1",
     "eslint": "^5.8.0",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.14.0"
