--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "scripts": {},
   "dependencies": {
     "bootstrap": "^4.1.3",
-    "font-awesome": "^4.7.0",
     "jquery": "^3.3.1",
-    "popper.js": "^1.14.4"
+    "popper.js": "^1.14.4",
+    "reset-css": "^4.0.1"
   },
   "devDependencies": {
+    "@fortawesome/fontawesome-free": "^5.5.0",
     "eslint": "^5.8.0",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.14.0"
