--- a/.eslintrc
+++ b/.eslintrc
@@ -1,3 +1,20 @@
 {
-  "extends": "airbnb-base/legacy"
+  "parserOptions": {
+    "ecmaVersion": 2017
+  },
+  "env": {
+    "es6": true
+  },
+  "extends": [
+    "airbnb-base",
+    "airbnb-base/legacy"
+  ],
+  "rules": {
+    "class-methods-use-this": "off",
+    "comma-dangle": ["error", "always-multiline"],
+    "consistent-return": 0,
+    "no-multiple-empty-lines": ["error", { "max": 1 }],
+    "no-underscore-dangle": 0,
+    "semi": ["error", "always", { "omitLastInOneLineBlock": true}]
+  }
 }
