--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.1",
   "scripts": {},
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.8.1",
     "bootstrap": "^4.3.1",
-    "font-awesome": "^4.7.0",
     "jquery": "^3.3.1",
     "popper.js": "^1.15.0"
   },
