--- a/package.json
+++ b/package.json
@@ -1,16 +1,25 @@
 {
   "name": "code-playground",
   "version": "1.0.1",
-  "scripts": {},
+  "scripts": {
+    "start": "webpack"
+  },
   "dependencies": {
-    "@fortawesome/fontawesome-free": "^5.8.1",
-    "bootstrap": "^4.3.1",
-    "jquery": "^3.3.1",
-    "popper.js": "^1.15.0"
+    "babel-polyfill": "^6.26.0",
+    "idb": "^4.0.3",
+    "webpack": "^4.29.6"
   },
   "devDependencies": {
+    "@babel/core": "7.2.2",
+    "@babel/preset-env": "7.3.1",
+    "@babel/register": "7.0.0",
+    "babel-loader": "8.0.5",
+    "css-loader": "^2.1.1",
     "eslint": "^5.16.0",
     "eslint-config-airbnb-base": "^13.1.0",
-    "eslint-plugin-import": "^2.16.0"
+    "eslint-plugin-import": "^2.16.0",
+    "sass-loader": "^7.1.0",
+    "style-loader": "^0.23.1",
+    "webpack-cli": "^3.3.0"
   }
 }
