--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "babel-polyfill": "^6.26.0",
     "idb": "^4.0.3",
+    "node-sass": "^4.11.0",
     "webpack": "^4.29.6"
   },
   "devDependencies": {
